Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56191

No error code assignment before verification

    XMLWordPrintable

Details

    • WinRT
    • bd7dda4614eb776c40a1eb3b6f1bbe531fa8abb5

    Description

      QBluetoothDeviceDiscoveryAgent_winrt.cpp:66

      bluetoothInfoFromDeviceId(HSTRING deviceId)

      Lines 74 and 76 are checking hr for errors, but line 75 does not assign hr.

      73 hr = deviceStatics->FromIdAsync(deviceId, &deviceFromIdOperation);
      74 WARN_AND_RETURN_IF_FAILED("Could not obtain bluetooth device from id", return QBluetoothDeviceInfo());
      75 QWinRTFunctions::await(deviceFromIdOperation, device.GetAddressOf());
      76 WARN_AND_RETURN_IF_FAILED("Could not wait for bluetooth device operation to finish", return QBluetoothDeviceInfo());

      Same problem in bluetoothInfoFromLeDeviceId(HSTRING deviceId)

      Attachments

        For Gerrit Dashboard: QTBUG-56191
        # Subject Branch Project Status CR V

        Activity

          People

            owolff Oliver Wolff
            cmr Christian Müller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes