winrt: Added missing error handling to device discovery and low energy

Task-number: QTBUG-56191
Task-number: QTBUG-56219
Change-Id: I8ad3dc392d09055418b0dca3794386e53f287307
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>